--- a/site/css/global.css
+++ b/site/css/global.css
@@ -83,6 +83,14 @@ body {
   color: #000 !important;
 }
 
+.fundo-cinza {
+  background-color: #EEE !important;
+}
+
+.fundo-preto {
+  background-color: #000 !important;
+}
+
 /* ========= MENU ========= */
 
 .navbar-nav {
@@ -138,15 +146,74 @@ body {
   text-decoration: none !important;
 }
 
+/* ========= SEARCH AUTOCOMPLETE ========= */
+
+.psqDiv {
+	display: flex;
+	align-items: center;
+}
+
+.psqDiv p {
+	display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0 0.25rem;
+}
+
+.psqCampo {
+	padding: 0.5rem !important;
+}
+
+.autocomplete-suggestions {
+	/*border: 1px solid #999;*/
+  background: #fff;
+  overflow: auto;
+	cursor: pointer;
+}
+
+.autocomplete-suggestion {
+	padding: 2px 5px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.autocomplete-selected {
+	background: #f0f0f0;
+}
+
+.autocomplete-suggestions strong {
+	font-weight: bold;
+  color: #000;
+}
+
+.autocomplete-group {
+	padding: 2px 5px;
+}
+
+.autocomplete-group strong {
+	display: block;
+  border-bottom: 1px solid #000;
+}
+
+/* ========= SLICK CAROUSEL ========= */
+
+.slick-prev {
+  left: 20px !important;
+  color:white !important;
+  z-index: 5;
+}
+
+.slick-next {
+  right: 20px !important;
+  color:white !important;
+}
+
+.slick-prev:before, 
+.slick-next:before { 
+  color:white !important;
+}
+
 /* ========= CATEGORIAS ========= */
-
-.fundo-cinza {
-  background-color: #EEE;
-}
-
-.fundo-preto {
-  background-color: #000;
-}
 
 .categoria {
   color: #FFF;
@@ -181,20 +248,40 @@ body {
   background-position: center;
 }
 
-/* ========= SLICK CAROUSEL ========= */
+/* ========= FOOTER ========= */
 
-.slick-prev {
-  left: 20px !important;
-  color:white !important;
-  z-index: 5;
+.footer-subtitle {
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem !important;
 }
 
-.slick-next {
-  right: 20px !important;
-  color:white !important;
+.icone-redes {
+  color: #000000; 
+  height: 2em;
 }
 
-.slick-prev:before, 
-.slick-next:before { 
-  color:white !important;
+.footer-redes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.footer-redes p {
+  margin-bottom: 0;
+  margin-right: 1em;
+}
+
+.footer-links {
+  margin-bottom: 0 !important;
+}
+
+.footer-logos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
 }
