Inclusão da página Alma Collection

--- a/site/css/global.css
+++ b/site/css/global.css
@@ -282,6 +282,6 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: flex-start;
 }
